--- a/src/main/resources/META-INF/jdbc.properties
+++ b/src/main/resources/META-INF/jdbc.properties
@@ -20,7 +20,7 @@
 ################################################################################
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/gate
+jdbc.url=jdbc:mysql://localhost:3306/gate?serverTimezone=UTC
 jdbc.username=root
-jdbc.password=
+jdbc.password=root
 jdbc.maxPoolSize=20
