--- a/pom.xml
+++ b/pom.xml
@@ -126,14 +126,14 @@
   		<scope>runtime</scope>
   	</dependency>
   	<dependency>
-  		<groupId>org.codehaus.jackson</groupId>
-  		<artifactId>jackson-core-asl</artifactId>
-  		<version>1.9.13</version>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-databind</artifactId>
+  		<version>2.8.7</version>
   		<scope>runtime</scope>
   	</dependency>
   	<dependency>
   		<groupId>com.fasterxml.jackson.core</groupId>
-  		<artifactId>jackson-databind</artifactId>
+  		<artifactId>jackson-annotations</artifactId>
   		<version>2.8.7</version>
   		<scope>runtime</scope>
   	</dependency>
