--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
-  		<version>4.4</version>
+  		<version>4.12</version>
   		<scope>test</scope>
   	</dependency>
   	<dependency>
@@ -108,12 +108,6 @@
   		<scope>runtime</scope>
   	</dependency>
   	<dependency>
-  		<groupId>org.springframework.data</groupId>
-  		<artifactId>spring-data-jpa</artifactId>
-  		<version>1.11.0.RELEASE</version>
-  		<scope>runtime</scope>
-  	</dependency>
-  	<dependency>
   		<groupId>org.hibernate</groupId>
   		<artifactId>hibernate-core</artifactId>
   		<version>5.2.8.Final</version>
@@ -135,6 +129,24 @@
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-annotations</artifactId>
   		<version>2.8.7</version>
+  		<scope>runtime</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>javax.servlet-api</artifactId>
+  		<version>3.1.0</version>
+  		<scope>runtime</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.jayway.jsonpath</groupId>
+  		<artifactId>json-path</artifactId>
+  		<version>2.2.0</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework.data</groupId>
+  		<artifactId>spring-data-jpa</artifactId>
+  		<version>1.11.1.RELEASE</version>
   		<scope>runtime</scope>
   	</dependency>
   </dependencies>
