--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,11 @@
   		<version>1.11.1.RELEASE</version>
   		<scope>runtime</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>commons-beanutils</groupId>
+  		<artifactId>commons-beanutils</artifactId>
+  		<version>1.9.3</version>
+  		<scope>runtime</scope>
+  	</dependency>
   </dependencies>
 </project>
