--- a/pom.xml
+++ b/pom.xml
@@ -158,5 +158,41 @@
   		<version>1.9.3</version>
   		<scope>runtime</scope>
   	</dependency>
+  	<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+    <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.1.0.Final</version>
+  		<scope>runtime</scope>
+    </dependency>
+  	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>5.4.1.Final</version>
+  		<scope>runtime</scope>
+    </dependency>
+  	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.8.8</version>
+  		<scope>runtime</scope>
+    </dependency>
+  	<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+    <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>persistence-api</artifactId>
+        <version>1.0.2</version>
+  		<scope>runtime</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+    <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.9.3</version>
+  		<scope>runtime</scope>
+    </dependency>
+  	
   </dependencies>
 </project>
