--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
   		<groupId>org.hibernate</groupId>
   		<artifactId>hibernate-validator</artifactId>
   		<version>5.4.1.Final</version>
-  		<scope>runtime</scope>
+  		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>javax.validation</groupId>
@@ -132,7 +132,7 @@
   		<groupId>com.fasterxml.jackson.core</groupId>
   		<artifactId>jackson-annotations</artifactId>
   		<version>2.8.7</version>
-  		<scope>runtime</scope>
+  		<scope>compile</scope>
   	</dependency>
   	<dependency>
   		<groupId>javax.servlet</groupId>
@@ -156,14 +156,14 @@
   		<groupId>commons-beanutils</groupId>
   		<artifactId>commons-beanutils</artifactId>
   		<version>1.9.3</version>
-  		<scope>runtime</scope>
+  		<scope>compile</scope>
   	</dependency>
   	<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
     <dependency>
         <groupId>javax.persistence</groupId>
         <artifactId>persistence-api</artifactId>
         <version>1.0.2</version>
-  		<scope>runtime</scope>
+  		<scope>compile</scope>
     </dependency>
   	
   </dependencies>
