--- a/pom.xml
+++ b/pom.xml
@@ -158,11 +158,11 @@
   		<version>1.9.3</version>
   		<scope>compile</scope>
   	</dependency>
-  	<!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+    <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
     <dependency>
-        <groupId>javax.persistence</groupId>
-        <artifactId>persistence-api</artifactId>
-        <version>1.0.2</version>
+        <groupId>org.hibernate.javax.persistence</groupId>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>1.0.0.Final</version>
   		<scope>compile</scope>
     </dependency>
   	
