--- a/src/test/resources/META-INF/jdbc.properties
+++ b/src/test/resources/META-INF/jdbc.properties
@@ -22,5 +22,5 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/gate?serverTimezone=UTC
 jdbc.username=root
-jdbc.password=root
+jdbc.password=aws.mysql@8944
 jdbc.maxPoolSize=20
